--- a/common_core/libft/Makefile
+++ b/common_core/libft/Makefile
@@ -1,46 +1,42 @@
-LIB = ar
-RM = rm -f
+NAME = libft
+SRCS = ft_isalpha.c ft_isdigit.c ft_isalnum.c ft_isascii.c ft_isprint.c \
+		ft_strlen.c ft_memset.c ft_bzero.c ft_memcpy.c ft_memmove.c \
+		ft_strlcpy.c ft_strlcat.c ft_toupper.c ft_tolower.c ft_strchr.c \
+		ft_strrchr.c ft_strncmp.c ft_memchr.c ft_memcmp.c ft_strnstr.c \
+		ft_atoi.c ft_calloc.c ft_strdup.c \
+		ft_substr.c ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c \
+		ft_striteri.c ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
+SRCS_BONUS = ft_lstnew.c ft_lstadd_front.c ft_lstsize.c ft_lstlast.c ft_lstadd_back.c \
+				ft_lstdelone.c ft_lstclear.c ft_lstiter.c ft_lstmap.c
+OBJS = $(SRCS:.c=.o)
+OBJS_BONUS = $(SRCS_BONUS:.c=.o)
 
-CC = gcc
-CCFLAGS = -Wall -Wextra -Werror
-
-NAME = libft.a
-SRC = ft_strlen.c ft_isalpha.c ft_isalnum.c ft_isascii.c ft_isdigit.c\
-ft_isprint.c ft_toupper.c ft_tolower.c ft_strlcpy.c ft_strlcat.c ft_strncmp.c\
-ft_strnstr.c ft_atoi.c ft_strchr.c ft_strrchr.c ft_memset.c ft_bzero.c ft_memcpy.c\
-ft_memmove.c ft_memchr.c ft_memcmp.c ft_calloc.c ft_strdup.c ft_substr.c\
-ft_strjoin.c ft_strtrim.c ft_split.c ft_itoa.c ft_strmapi.c ft_striteri.c\
-ft_putchar_fd.c ft_putstr_fd.c ft_putendl_fd.c ft_putnbr_fd.c
-OBJ = $(SRC:.c=.o)
-INCLUDE = libft.h
-
-BONUS_SRC = ft_lstnew_bonus.c ft_lstadd_front_bonus.c ft_lstsize_bonus.c ft_lstlast_bonus.c\
-ft_lstadd_back_bonus.c ft_lstdelone_bonus.c ft_lstclear_bonus.c ft_lstiter_bonus.c ft_lstmap_bonus.c
-BONUS_OBJ = $(BONUS_SRC:.c=.o)
-
-so:
-	$(CC) -nostartfiles -fPIC $(CFLAGS) $(SRC)
-	gcc -nostartfiles -shared -o libft.so $(OBJ)
-
-.PHONY: all clean fclean re bonus
+CC = clang
+CFLAGS = -Wall -Wextra -Werror
+ARFLAGS = -rcs
+RM = rm -rf
 
 all: $(NAME)
 
-$(NAME): $(OBJ)
-	$(LIB) rcs $(NAME) $(OBJ)
+$(NAME): $(OBJS)
+	ar $(ARFLAGS) $(NAME).a $(OBJS)
 
-bonus: $(NAME) $(BONUS_OBJ)
-	$(LIB) r $(NAME) $(BONUS_OBJ)
+%.o: %.c
+	$(CC) $(CFLAGS) -c $< -o $@
 
-%.o: %.c $(INCLUDE)
-	$(CC) $(CCFLAGS) -c -o $@ $<
+bonus: $(OBJS) $(OBJS_BONUS)
+	ar $(ARFLAGS) $(NAME).a $(OBJS) $(OBJS_BONUS)
+
+so:
+	$(CC) -nostartfiles -fPIC $(CFLAGS) $(SRCS)
+	gcc -nostartfiles -shared -o $(NAME).so $(OBJS)
 
 clean:
-	$(RM) $(OBJ) $(BONUS_OBJ)
+	$(RM) $(OBJS) $(OBJS_BONUS)
 
 fclean: clean
-	$(RM) $(NAME)
+	$(RM) $(NAME).a $(NAME).so
 
 re: fclean all
 
-rebonus: fclean bonus
+.PHONY: all, clean, fclean, re
